--- a/print.html
+++ b/print.html
@@ -37,6 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
+            window.path_to_searchindex_js = "searchindex.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc.js"></script>
@@ -93,10 +94,13 @@
                 sidebar = sidebar || 'visible';
             } else {
                 sidebar = 'hidden';
+                sidebar_toggle.checked = false;
             }
-            sidebar_toggle.checked = sidebar === 'visible';
-            html.classList.remove('sidebar-visible');
-            html.classList.add("sidebar-" + sidebar);
+            if (sidebar === 'visible') {
+                sidebar_toggle.checked = true;
+            } else {
+                html.classList.remove('sidebar-visible');
+            }
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
@@ -147,7 +151,12 @@
 
                 <div id="search-wrapper" class="hidden">
                     <form id="searchbar-outer" class="searchbar-outer">
-                        <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..." aria-controls="searchresults-outer" aria-describedby="searchresults-header">
+                        <div class="search-wrapper">
+                            <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..." aria-controls="searchresults-outer" aria-describedby="searchresults-header">
+                            <div class="spinner-wrapper">
+                                <i class="fa fa-spinner fa-spin"></i>
+                            </div>
+                        </div>
                     </form>
                     <div id="searchresults-outer" class="searchresults-outer hidden">
                         <div id="searchresults-header" class="searchresults-header"></div>
@@ -186,7 +195,7 @@
 </ul>
 </li>
 <li>Dart</li>
-<li>Kotlin (using JNA)</li>
+<li><a href="./backends/kotlin.html">Kotlin (using JNA)</a></li>
 <li>Python via <a href="https://github.com/wjakob/nanobind">Nanobind</a> (maintained by <a href="https://www.zeromatter.com/">Zeromatter</a>)</li>
 </ul>
 <p>There is work in progress for a <a href="https://github.com/rust-diplomat/diplomat/issues/144">Java backend</a> (using Panama). We used to have a .NET backend but it was removed in a refactor, it may get added again.</p>
@@ -1082,6 +1091,37 @@ mod ffi {
 }
 <span class="boring">}</span></code></pre></pre>
 <p>In Dart, this will generate a <code>toString()</code> method.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="slices"><a class="header" href="#slices">Slices</a></h1>
+<h2 id="static-slices"><a class="header" href="#static-slices">Static Slices</a></h2>
+<p>(Supported by <code>c</code>, <code>cpp</code>, <code>kotlin</code>, <code>nanobind</code>, queried with <code>supports=static_slices</code>)</p>
+<p>Support for <code>&amp;'static</code> slices.</p>
+<h2 id="primitive-structs"><a class="header" href="#primitive-structs">Primitive Structs</a></h2>
+<p>(Supported by <code>c</code>, <code>cpp</code>, queried with <code>supports=struct_primitive_slices</code>)</p>
+<p>Some Diplomat backends support providing slices of structs as function parameters:</p>
+<pre><code class="language-rs">#[diplomat::bridge]
+mod ffi {
+    #[diplomat::attr(auto, allowed_in_slices)]
+    struct Struct {
+        a : bool,
+        b : i32
+    }
+
+    impl Struct {
+        pub fn bar(slice : &amp;mut [Struct]) {}
+        pub fn baz(other_slice : &amp;[Struct]) {}
+    }
+}
+</code></pre>
+<p>Mapping Diplomat types from the bound language to the C API can vary based on what types are in the struct. To reduce this complexity, slices of structs come with some restrictions:</p>
+<ul>
+<li>The struct type must have <code>#[diplomat::attr(auto, allowed_in_slices)]</code> attribute.</li>
+<li>The struct can only have fields that are either:
+<ul>
+<li>Primitive</li>
+<li>Nested primitive structs</li>
+</ul>
+</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="notes-on-diplomat-and-safety"><a class="header" href="#notes-on-diplomat-and-safety">Notes on Diplomat and safety</a></h1>
 <p>Overall, Diplomat is intended to provide safe FFI. However, there are some caveats around the current state of Diplomat's safety.</p>
 <h2 id="the-safety-of-the-bridge-crate-when-called-from-rust"><a class="header" href="#the-safety-of-the-bridge-crate-when-called-from-rust">The safety of the bridge crate when called from Rust</a></h2>
@@ -1649,6 +1689,68 @@ mod ffi {
 </code></pre>
 <p>And our exported object is then added to <code>RenderInfo</code>s list of render termini, and is evaluated by the renderer accordingly!</p>
 <p>If you <a href="https://rust-diplomat.github.io/diplomat/demo_gen/quickstart.html#getting-started">regenerate the bindings and start the web server</a>, you should see <code>Add a + b, b + c</code> in the list of functions.</p>
+<div style="break-before: page; page-break-before: always;"></div><p>The different backends have specific considerations or configurations. Check below
+to see what is necessary. Documentation for more backends will be added in the future.</p>
+<ul>
+<li><a href="backends/kotlin.html">Kotlin</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="kotlin-backend"><a class="header" href="#kotlin-backend">Kotlin Backend</a></h1>
+<p>The kotlin backend uses JNA to wrap the ABI types from diplomat into an ergonomic library for use in the JVM.
+The backend ensures safe sharing and disposal of memory, but it is still experimental so bugs may exist.</p>
+<p>To run the kotlin backend you need to provide some configuration</p>
+<pre><code class="language-sh">diplomat-tool -e {PATH_TO_LIB.RS} -c {CONFIG_FILE} --config {CONFIG_OVERRIDE_1} --config {CONFIG_OVERRIDE_2} kotlin {OUTPUT_PATH}
+</code></pre>
+<p>The configuration consists of three parts</p>
+<ul>
+<li><code>lib-name</code> - the name of the library. This can be different to the rust library name, but native access will
+look for a file with the name <code>lib{lib-name}.so</code> (linux) or <code>lib{lib-name}.dylib</code> (macos) or <code>{lib-name}.dll</code> (windows)
+If you include this in <code>src/main/resources</code> then the library should be packaged automatically when you publish
+the kotlin library. With the appropriate directory structure you can include binaries for multple operating
+systems and architectures.</li>
+<li><code>kotlin.domain</code> - this is the group of the package, e.g. <code>io.apache</code>.</li>
+<li><code>kotlin.use_finalizers_not_cleaners</code> - An optional binary value. By default kotlin uses the Cleaner API from
+Java 9 onwards for cleaning up the native memory alloated by the diplomat library. It can, however, be
+configured to use the finalizer api from Java 8 and prior.</li>
+<li><code>kotlin.scaffold</code> - an optional binary value. If it is set to <code>true</code>, <code>diplomat-tool</code> will scaffold a project
+for you with configuration corresponding to your group and library name.</li>
+</ul>
+<p>Diplomat always create the following structure in the <code>OUTPUT_PATH</code></p>
+<pre><code>├── src 
+│   └── main
+│       └── kotlin
+│           └──{group-tld}
+│               └──{group-name}
+│                   └──{lib-name} 
+│                       ├── GeneratedFile.kt
+│                       ├── ...
+│                       ├── Lib.kt
+│                       ├── ...
+</code></pre>
+<p>The <code>Lib.kt</code> file includes some utility methods that the library uses, as well as a dedicated cleaner.
+If you choose <code>scaffold</code> then it will also generate a couple of config files</p>
+<pre><code>├── src 
+│   └── ...
+├── build.gradle.kts
+├── setttings.gradle.kts
+</code></pre>
+<h2 id="examples"><a class="header" href="#examples">Examples</a></h2>
+<p>The best way to learn to use the kotlin backend is first understand diplomat generally by reading this <a href="backends/../SUMMARY.html">book</a>.
+Then look at the <code>example</code> and <code>feature_tests</code> directories in the diplomat project. Then you can look at the tests
+for how to use them</p>
+<ul>
+<li>Feature tests: <a href="https://github.com/rust-diplomat/diplomat/tree/main/feature_tests/src/">rust source</a>, <a href="https://github.com/rust-diplomat/diplomat/tree/main/feature_tests/kotlin/somelib/src/test/kotlin/dev/diplomattest/somelib">kotlin usage</a></li>
+<li>Example: <a href="https://github.com/rust-diplomat/diplomat/tree/main/example/src/">rust source</a>, <a href="https://github.com/rust-diplomat/diplomat/tree/main/example/kotlin/somelib/src/test/kotlin/dev/diplomattest/somelib">kotlin usage</a></li>
+</ul>
+<h3 id="callbacks"><a class="header" href="#callbacks">Callbacks</a></h3>
+<p>The kotlin backend supports passing kotlin functions and closures as callbacks to native code. To do this you need to add the
+enable the <code>jvm-callback-support</code> feature when you add  the diplomat runtime to your project. For examples on how to use them
+look in the <code>feature_tests</code> directory of the diplomat project. This is a bit conceptually different to the rest of diplomat
+so here some specific examples</p>
+<ul>
+<li><a href="https://github.com/rust-diplomat/diplomat/blob/main/feature_tests/src/callbacks.rs">rust code</a></li>
+<li><a href="https://github.com/rust-diplomat/diplomat/blob/main/feature_tests/kotlin/somelib/src/main/kotlin/dev/diplomattest/somelib/CallbackWrapper.kt">generated kotlin code</a></li>
+<li><a href="https://github.com/rust-diplomat/diplomat/blob/main/feature_tests/kotlin/somelib/src/test/kotlin/dev/diplomattest/somelib/CallbackWrapperTest.kt">example usage</a></li>
+</ul>
 
                     </main>
 
@@ -1690,6 +1792,7 @@ mod ffi {
             window.setTimeout(window.print, 100);
         });
         </script>
+
 
     </div>
     </body>
